DuPont DevSB/src/objects/Customer_Data_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Function__c</fullName>
        <description>The abbreviated form of the name that identifies the partner function. Its is a combination of Partner Function Code and the type</description>
        <label>Partner Function Code/Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA-SP Contract rel. or</fullName>
                </value>
                <value>
                    <fullName>SP-Sold-to Party</fullName>
                </value>
                <value>
                    <fullName>CP-Contact Person</fullName>
                </value>
                <value>
                    <fullName>AW-SH Contract rel. or</fullName>
                </value>
                <value>
                    <fullName>BU-Buyer</fullName>
                </value>
                <value>
                    <fullName>EM-Headquarter Sales R</fullName>
                </value>
                <value>
                    <fullName>EU-Enduser for F.Trade</fullName>
                </value>
                <value>
                    <fullName>VN-Vendor</fullName>
                </value>
                <value>
                    <fullName>Q1-QtyCertRec/ShpTo Pt</fullName>
                </value>
                <value>
                    <fullName>Q2-QtyCertRec/SoldTo P</fullName>
                </value>
                <value>
                    <fullName>BP-Bill-to Party</fullName>
                </value>
                <value>
                    <fullName>PY-Payer</fullName>
                </value>
                <value>
                    <fullName>SB-Spec.Stock Partner</fullName>
                </value>
                <value>
                    <fullName>CR-Forwarding Agent</fullName>
                </value>
                <value>
                    <fullName>PE-Sales Employee</fullName>
                </value>
                <value>
                    <fullName>SH-Ship-to Party</fullName>
                </value>
                <value>
                    <fullName>Y1-Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Y2-Cust.Clearing Agent</fullName>
                </value>
                <value>
                    <fullName>Y3-Distributor</fullName>
                </value>
                <value>
                    <fullName>Y4-COA Recipient</fullName>
                </value>
                <value>
                    <fullName>Y5-COA Recipient</fullName>
                </value>
                <value>
                    <fullName>Y6-COA Recipient</fullName>
                </value>
                <value>
                    <fullName>Y7-Comm. partner (SH)</fullName>
                </value>
                <value>
                    <fullName>Y8-Comm. partner 2 (SH</fullName>
                </value>
                <value>
                    <fullName>Y9-Comm. partner 3 (SH</fullName>
                </value>
                <value>
                    <fullName>YA-Comm. partner 4 (SH</fullName>
                </value>
                <value>
                    <fullName>YD-Discarding Packing</fullName>
                </value>
                <value>
                    <fullName>YE-Comm. partner 5 (SH</fullName>
                </value>
                <value>
                    <fullName>YF-Comm. partner 6 (SH</fullName>
                </value>
                <value>
                    <fullName>YK-Customer Care Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Number__c</fullName>
        <description>Number of an SD business partner</description>
        <label>Partner Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>The postal (zip) code for the house address(street and city).</description>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A203</fullName>
                </value>
                <value>
                    <fullName>A218</fullName>
                </value>
                <value>
                    <fullName>A248</fullName>
                </value>
                <value>
                    <fullName>A603</fullName>
                </value>
                <value>
                    <fullName>A618</fullName>
                </value>
                <value>
                    <fullName>A66F</fullName>
                </value>
                <value>
                    <fullName>AD03</fullName>
                </value>
                <value>
                    <fullName>AD18</fullName>
                </value>
                <value>
                    <fullName>AD6F</fullName>
                </value>
                <value>
                    <fullName>AD91</fullName>
                </value>
                <value>
                    <fullName>B903</fullName>
                </value>
                <value>
                    <fullName>B918</fullName>
                </value>
                <value>
                    <fullName>B991</fullName>
                </value>
                <value>
                    <fullName>B9F6</fullName>
                </value>
                <value>
                    <fullName>C518</fullName>
                </value>
                <value>
                    <fullName>D618</fullName>
                </value>
                <value>
                    <fullName>D66F</fullName>
                </value>
                <value>
                    <fullName>D691</fullName>
                </value>
                <value>
                    <fullName>F403</fullName>
                </value>
                <value>
                    <fullName>F418</fullName>
                </value>
                <value>
                    <fullName>F46F</fullName>
                </value>
                <value>
                    <fullName>F491</fullName>
                </value>
                <value>
                    <fullName>F803</fullName>
                </value>
                <value>
                    <fullName>F818</fullName>
                </value>
                <value>
                    <fullName>F86F</fullName>
                </value>
                <value>
                    <fullName>F891</fullName>
                </value>
                <value>
                    <fullName>G203</fullName>
                </value>
                <value>
                    <fullName>G218</fullName>
                </value>
                <value>
                    <fullName>G26F</fullName>
                </value>
                <value>
                    <fullName>G291</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_Delivery_Plant__c</fullName>
        <label>Ship to Delivery Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Sales_Office__c</fullName>
        <description>A physical location (for example, a branch office) that has responsibility for the sale of certain products or services within a given geographical area.</description>
        <label>Ship-to Sales Office</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions__c</fullName>
        <description>General shipping strategy for the delivery of goods from the vendor to the customer.</description>
        <label>Shipping Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-FTL Normal</fullName>
                </value>
                <value>
                    <fullName>02-LTL Normal</fullName>
                </value>
                <value>
                    <fullName>03-FTL Rush</fullName>
                </value>
                <value>
                    <fullName>04-LTL Rush</fullName>
                </value>
                <value>
                    <fullName>05-GRP Normal</fullName>
                </value>
                <value>
                    <fullName>06-GRP Rush</fullName>
                </value>
                <value>
                    <fullName>07-Road Special</fullName>
                </value>
                <value>
                    <fullName>08-SEA FCL</fullName>
                </value>
                <value>
                    <fullName>09-SEA LCL</fullName>
                </value>
                <value>
                    <fullName>10-Air Direct</fullName>
                </value>
                <value>
                    <fullName>11-Air Consolidated</fullName>
                </value>
                <value>
                    <fullName>12-Rail</fullName>
                </value>
                <value>
                    <fullName>13-Customer pickup</fullName>
                </value>
                <value>
                    <fullName>14-Sea Deparmnt Consol.</fullName>
                </value>
                <value>
                    <fullName>15-Sea CCS</fullName>
                </value>
                <value>
                    <fullName>16-Barge</fullName>
                </value>
                <value>
                    <fullName>17-Temp Controlled</fullName>
                </value>
                <value>
                    <fullName>18-Cust PU-SpecSituatio</fullName>
                </value>
                <value>
                    <fullName>19-Intermodal</fullName>
                </value>
                <value>
                    <fullName>20-Rail Rush</fullName>
                </value>
                <value>
                    <fullName>21-Pipeline</fullName>
                </value>
                <value>
                    <fullName>22-CUST PICKUP EDI</fullName>
                </value>
                <value>
                    <fullName>A1-Air Overnight</fullName>
                </value>
                <value>
                    <fullName>A2-Air 2 days</fullName>
                </value>
                <value>
                    <fullName>A3-Air 3 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street3__c</fullName>
        <label>Street3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street4__c</fullName>
        <label>Street4</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>Captures Telephone number</description>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <label>Customer Data Request Line Item</label>
    <nameField>
        <displayFormat>CDRITM-{YY}{MM}{DD}-{000000000}</displayFormat>
        <label>Customer Data Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Data Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>Add_Billing_Address</fullName>
        <active>false</active>
        <description>To Capture the Billing Address details of the Customer</description>
        <label>Add/Modify Billing Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_New_Partner_User</fullName>
        <active>false</active>
        <description>To add a new DuPont Partner User to a Customer Data Request</description>
        <label>Add New Partner User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Payer_Address</fullName>
        <active>false</active>
        <description>To Capture the Pay To Address of the customer</description>
        <label>Add/Modify Payer Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Shipping_Address</fullName>
        <active>false</active>
        <description>To Capture the Shipping Address details of the Customer</description>
        <label>Add/Modify Shipping Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_new_bill_to_ship_to_payer</fullName>
        <active>true</active>
        <description>Create a request to add additional bill to, ship to and payer account groups to an existing customer</description>
        <label>Create new bill to, ship to, payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_new_partner_function</fullName>
        <active>true</active>
        <description>Create a request to add a create partner user for example end user, CSR, sales, etc.</description>
        <label>Create new partner function</label>
    </recordTypes>
    <recordTypes>
        <fullName>Link_Contact</fullName>
        <active>true</active>
        <description>Create a request  to add/link additional contacts to an existing customer</description>
        <label>Link Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Link_Existing_Partner_Function</fullName>
        <active>true</active>
        <description>Create a request to link a existing partner user to an existing customer</description>
        <label>Link Existing Partner Function</label>
    </recordTypes>
    <recordTypes>
        <fullName>Link_Existing_Partner_User</fullName>
        <active>false</active>
        <description>To add an existing DuPont Partner to the Customer</description>
        <label>Link Existing Partner User</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>